[tool.poetry]
name = "repl_nix_encourager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "<3.0.0"
discord-py = "2.3.2"
replit = "^3.5.0"
requests = "^2.31.0"
discord = "2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"